[project]
name = "social_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.7.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
    "var-dump>=1.2",
]
